Override Paint to fix strict mode text decorations and paint layer for :first-letter.  b=212149  r+sr=bzbarsky